--- a/css/breakpoints/_768up.css
+++ b/css/breakpoints/_768up.css
@@ -1,17 +1,21 @@
+body {
+  
+}
+
 .page {
 
 }
 
 header {
-  font-size: 72px;
+  font-size: 74px;
 }
 
 .alpha {
-  font-size: 92px;
+  font-size: 78px;
 }
 
 .lod {
-  font-size: 102px
+  font-size: 92px
 }
 
 .lod:hover {
