--- a/css/style.css
+++ b/css/style.css
@@ -259,14 +259,13 @@
 body {
   margin: 0;
   padding: 2vh;
-  height: 100vh;
   background: #EE943F;
   overflow: hidden;
 }
 
 .page {
   box-sizing: border-box;
-  height: 96vh;
+  height: 736px - 44px;
   padding: 20px;
   background: #33A23D;
   border-radius: 30px;
@@ -308,20 +307,20 @@ header {
 .alpha {
   margin-bottom: 20px;
   font-family: 'Short Stack', sans-serif;
-  font-size: calc(44px + 8 * ((100vw - 320px) / 55));
+  font-size: calc(36px + 6 * ((100vw - 320px) / 55));
   color: white;
   text-transform: uppercase;
 }
 
 @media screen and (min-width: 375px) {
   .alpha {
-    font-size: 52px;
+    font-size: 42px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .alpha {
-    font-size: 44px;
+    font-size: 36px;
   }
 }
 
@@ -358,20 +357,20 @@ header {
 .lod {
   display: inline-block;
   padding: 0px 6px;
-  font-size: calc(54px + 8 * ((100vw - 320px) / 55));
+  font-size: calc(38px + 16 * ((100vw - 320px) / 55));
   text-shadow: 4px 4px rgba(170,170,170,0.5) !important;
   line-height: 0.8;
 }
 
 @media screen and (min-width: 375px) {
   .lod {
-    font-size: 62px;
+    font-size: 54px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lod {
-    font-size: 54px;
+    font-size: 38px;
   }
 }
 
@@ -395,15 +394,16 @@ header {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
+  body {}
   .page {}
   header {
-    font-size: 72px;
+    font-size: 74px;
   }
   .alpha {
-    font-size: 92px;
+    font-size: 78px;
   }
   .lod {
-    font-size: 102px;
+    font-size: 92px;
   }
   .lod:hover {
     border: 6px solid rgba(200,200,200,0.5);
@@ -416,7 +416,12 @@ header {
 }
 
 @media (min-width: 1024px) {
-  .page {}
+  body {
+    height: 100vh;
+  }
+  .page {
+    height: 96vh;
+  }
   header {
     font-size: 92px;
   }
